--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
 :root{
     --header-height: 5%;
 }
+
+html,
+body{
+    height: 100%;
+    background-color: blue;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+header{
+    min-height: var(--header-height);
+    background-color: aqua;
+    flex: 0 1 auto;
+}
+
+content{
+    background-color: aquamarine;
+    flex: 1 1 auto;
+}
+
+footer{
+    flex: 0 1 var(--header-height);
+    background-color: blueviolet;
+}
