--- a/style.css
+++ b/style.css
@@ -31,19 +31,24 @@ header{
     background-color: aqua;
     flex: 0 1 auto;
     width: 100%;
-    display: inline;
+    display: flex;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: 10px;
 }
 
 header h1, ul{
-    display: inline;
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
 }
+
 header ul li{
     float: right;
     display: inline;
     list-style-type: none;
+    padding: 5px;
 }
 
 header ul a{
