--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 :root {
     --header-height: 5%;
     --min-margin-left-right: 10%;
+    --header-color: #004E98;
+    --footer-color: #3A6EA5;
+    --accent-color-1: #FF6700;
+    --accent-color-2: #C0C0C0;
+    --accent-color-3: #EBEBEB;
+
 }
 
 * {
@@ -13,7 +19,6 @@ html {
     padding-left: 50px;
     padding-right: 50px;
     background-color: black;
-    border: 1px solid white;
     display: flex;
     justify-content: center;
 }
@@ -22,6 +27,7 @@ body
 {
     width: 100%;
     max-width: 800px;
+    background-color: var(--accent-color-3);
 }
 
 header {
@@ -30,7 +36,7 @@ header {
     width: 100%;
     padding: 0% 70px 0%;
     top: 0%;
-    background-color: #53599A;
+    background-color: var(--header-color);
     display: flex;
     align-content: center;
     justify-content: space-between;
@@ -69,12 +75,11 @@ header ul li {
 
 header ul a {
     text-decoration: none;
-    background-color: red;
+    /* TODO: GEt background color */
 }
 
 content {
     padding: 15px;
-    background-color: aquamarine;
     flex: 1 1 auto;
     width: 100%;
 }
@@ -90,7 +95,7 @@ footer {
     position: fixed;
     bottom: 0;
     min-height: var(--header-height);
-    background-color: #5AA9E6;
+    background-color: var(--footer-color);
     width: 100%;
     display: inline-flex;
     justify-content: center;
