--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header ul li {
 
 header ul a {
     text-decoration: none;
-    /* TODO: GEt background color */
+    /* TODO: Get background color */
 }
 
 content {
