--- a/style.css
+++ b/style.css
@@ -75,7 +75,18 @@ header ul li {
 
 header ul a {
     text-decoration: none;
+    background-color: var(--footer-color);
+    text-decoration: none;
+    color: var(--accent-color-3);
     /* TODO: Get background color */
+}
+
+a{
+    text-decoration: none;
+    padding: 8px;
+    border-radius: 10px;
+    background-color: var(--footer-color);
+    color: var(--accent-color-3);
 }
 
 content {
@@ -95,10 +106,11 @@ footer {
     position: fixed;
     bottom: 0;
     min-height: var(--header-height);
-    background-color: var(--footer-color);
+    background-color: var(--header-color);
     width: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     flex: 0 1 var(--header-height);
+    color: var(--accent-color-3);
 }
